@@ -19,10 +19,15 @@ func NewCommandWithArgs(streams *cli.IOStreams) *cobra.Command {
 		Use:   "version",
 		Short: "Display the version of the agent.",
 		Run: func(_ *cobra.Command, _ []string) {
+			version := release.Version()
+			if release.Snapshot() {
+				version = version + "-SNAPSHOT"
+			}
+
 			fmt.Fprintf(
 				streams.Out,
 				"Agent version is %s (build: %s at %s)\n",
-				release.Version(),
+				version,
 				release.Commit(),
 				release.BuildTime(),
 			)
